--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,11 @@
 				<groupId>com.heroku.sdk</groupId>
 				<artifactId>heroku-maven-plugin</artifactId>
 				<version>3.0.7</version>
-<!--				<configuration>-->
-<!--					<processTypes>-->
-<!--						<web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>-->
-<!--					</processTypes>-->
-<!--				</configuration>-->
+				<configuration>
+					<processTypes>
+						<web>java $JAVA_OPTS -cp target/classes:target/dependency/* MaisbonusApplication</web>
+					</processTypes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
